# vpnrouter-gateway

./: .gitattributes  .githooks-pre-commit.sh  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: adoption-prompt.md  gateway-architecture.md  gateway-deep-review.md  gateway-mvp.md  goal.md  project-pitch.md  review-plan.md
examples/: gateway-proxy.toml  gateway.toml
packaging/: README.md  vpnrouter-sing-box.service
schema/: gateway.schema.json
src/: apply.rs  config.rs  error.rs  main.rs  plan.rs  redact.rs  render.rs  status.rs  subscription.rs  tests.rs
tests/fixtures/: proxy-sub.txt
tests/golden/: gateway-minimal.sing-box.json  nft.rules  proxy-pinned.sing-box.json  proxy-urltest.sing-box.json  sing-box.json
