[package]
name = "vpnrouter-gateway"
version = "0.1.0"
edition = "2021"
description = "Linux-first software-defined edge gateway: gateway.toml -> validate -> render -> plan (spike 0: no apply)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
ipnet = { version = "2", features = ["serde"] }
lexopt = "0.3"
